renaming of project

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,11 @@
-@import "base";
-@import "layout";
-@import "components";
-
-
+@import 'base';
+@import 'features';
+@import 'footer';
+@import 'gallery';
+@import 'header';
+@import 'layout';
+@import 'players';
+@import 'sidebar';
+@import 'stadium';
+@import 'story';
+@import 'typography';
