--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
-:root {
-  /* Brighter blue */
-  /* blue */ }
-
+/* Brighter blue */
+/* blue */
 /* RESPONSIVE BREAKPOINTS */
 /* 1200px */
 /* 1100px */
@@ -30,21 +28,33 @@ html {
 
 body {
   font-family: "Nunito", sans-serif;
+  color: #f9f7f6;
   line-height: 1.6;
   min-height: 100vh; }
 
-/* Comment test */
-/* .container {
-    display: grid;
-    grid-template-rows: 
-    grid-template-columns: 
+.features {
+  background-color: #aaa; }
 
-    @media only screen and (max-width: $bp-large) {
-        grid-template-rows: 
-        grid-template-columns: 
-    }
+.footer {
+  background-color: #101d2c; }
 
-    @media only screen and (max-width: $bp-medium) {
-        grid-template-rows: 
-    }
-} */
+.gallery {
+  background-color: #f9f7f6; }
+
+.header {
+  background-color: #f9f7f6; }
+
+.homes {
+  background-color: #101d2c; }
+
+.players {
+  background-color: #101d2c; }
+
+.sidebar {
+  background-color: #0c22e8; }
+
+.story__pictures {
+  background-color: #0c22e8; }
+
+.story__content {
+  background-color: #f9f7f6; }
