--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,9 +3,8 @@
 @import 'footer';
 @import 'gallery';
 @import 'header';
-@import 'layout';
+@import 'homes';
 @import 'players';
 @import 'sidebar';
-@import 'stadium';
 @import 'story';
 @import 'typography';
