--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -47,5 +47,15 @@ body {
 
 .container {
   display: grid;
+  /* comments for the grid-template-rows */
+  // 80% of the view-height, then min-content - smallest size of box without overflowing content.
+  // 40% of view-width - whats visible in the viewport depending on how wide you make screen.
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  /* comments for the grid-template-columns */
+  // column layout specified below  1140/8 = 142px -> 140px -> 14rem because 14rem = 140px
+  // something between 1100 - 1200 px to divide up width of the screen
+  // function below - minmax - minimum it can be = min-content, max it can be per column = 14rem
+  // 8rem is for sidebar
+  // need to center the 8 minmax function columns
+  grid-template-columns: 8rem repeat(8, minmax(min-content, 14rem));
 }
