--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,21 @@ body {
   /* comments for the grid-template-columns */
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] 1fr [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] 1fr [full-end]; }
 
+/* why only name the columns and not the rows? */
 .features {
-  background-color: #aaa; }
+  background-color: #aaa;
+  /* features go from center-start to center-end - beginning to end of centre 8 grid */
+  grid-column: center-start / center-end; }
 
 .footer {
-  background-color: #101d2c; }
+  background-color: #101d2c;
+  /* goes all the way from one end to the other end full bleed section */
+  grid-column: full-start / full-end; }
 
 .gallery {
-  background-color: #f9f7f6; }
+  background-color: #f9f7f6;
+  /* goes all the way from one end to the other end full bleed section */
+  grid-column: full-start / full-end; }
 
 .header {
   background-color: #f9f7f6; }
@@ -58,7 +65,13 @@ body {
   background-color: #101d2c; }
 
 .sidebar {
-  background-color: #0c22e8; }
+  background-color: #0c22e8;
+  /* sidebar to start at the grid line sidebar-start, end at sidebar-end */
+  grid-column: sidebar-start / sidebar-end;
+  /* second step - want it to span from the beginning of the grid to the end */
+  /* (what is meant above is - all the way down the webpage) */
+  /* keyword for the end is -1 */
+  grid-row: 1 / -1; }
 
 .story__pictures {
   background-color: #0c22e8; }
