--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -63,3 +63,6 @@ body {
     repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end] 1fr [full-end];
 }
+
+/* why only name the columns and not the rows? */
+// in overall layout focus is generally on the columns and not the rows - columns more important
