--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,3 +1,5 @@
 .features {
   background-color: $color-grey-2;
+  /* features go from center-start to center-end - beginning to end of centre 8 grid */
+  grid-column: center-start / center-end;
 }
