--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,5 +1,5 @@
 .features {
-  background-color: $color-grey-2;
+  background-color: $color-primary-dark;
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
   grid-column: center-start / center-end;
 }
