--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,3 +1,8 @@
 .header {
   background-color: $color-grey-1;
+  /* 6/8 columns = for the header, 2/8 columns for the players section */
+  // please note comment above doesn't include outer parts - (1fr parts - for full bleed)
+  // 8 columns are only for the central section
+  grid-column: full-start / col-end 6;
+  // col-end 6? - ends after the sixth column - at the end of col 6
 }
