--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,3 +1,5 @@
 .homes {
   background-color: $color-secondary;
+  /* homes same as features go from center-start to center-end - beginning to end of centre 8 grid */
+  grid-column: center-start / center-end;
 }
