--- a/css/style.css
+++ b/css/style.css
@@ -37,17 +37,18 @@ body {
   /* comments for the grid-template-rows */
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   /* comments for the grid-template-columns */
-  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
-  /* container and all children - for development purposes */ }
-  .container > * {
-    padding: 40px;
-    font-size: 3rem; }
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
 
 /* why only name the columns and not the rows? */
 .features {
-  background-color: #0a19a1;
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
-  grid-column: center-start / center-end; }
+  grid-column: center-start / center-end;
+  margin: 15rem 0;
+  /* making features grid item a grid container */
+  display: grid;
+  /* making columns for this 'sub grid'. */
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 6rem; }
 
 .footer {
   background-color: #101d2c;
