--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html {
 
 body {
   font-family: "Nunito", sans-serif;
-  color: #aaa;
+  color: #101d2c;
   line-height: 1.6;
   min-height: 100vh; }
 
