--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -40,7 +40,7 @@ html {
 
 body {
   font-family: $font;
-  color: $color-grey-2;
+  color: $color-secondary;
   line-height: 1.6;
   min-height: 100vh;
 }
