--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,7 @@ body {
 .story__content {
   background-color: #f9f7f6;
   grid-column: col-start 5 / full-end; }
+
+.heading-1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400; }
