--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,6 @@ body {
   background-color: #f9f7f6;
   grid-column: col-start 5 / full-end; }
 
-.heading-1 {
+.heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Roboto", sans-serif;
   font-weight: 400; }
