--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,9 @@ body {
 .feature {
   /* Need to make the feature elements themselves individual grids */
   display: grid;
-  grid-template-columns: min-content 1fr; }
+  grid-template-columns: min-content 1fr;
+  grid-row-gap: 1.5rem;
+  grid-column-gap: 2.5rem; }
   .feature__icon {
     width: 4.5rem;
     height: 4.5rem;
