--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,9 @@ body {
   display: grid;
   /* making columns for this 'sub grid'. */
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 6rem; }
+  grid-gap: 6rem;
+  /* align text to be at the top of the boxes within the grid */
+  align-items: start; }
 
 .feature {
   /* Need to make the feature elements themselves individual grids */
