--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
   /* making features grid item a grid container */
   display: grid;
   /* making columns for this 'sub grid'. */
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 6rem;
   /* align text to be at the top of the boxes within the grid */
   align-items: start; }
