--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -25,3 +25,19 @@
   @extend %heading;
   font-size: 1.9rem;
 }
+
+.btn {
+  background-color: $color-primary;
+  color: $color-grey-1;
+  border: none;
+  border-radius: 0;
+  font-family: $font-display;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $color-primary-dark;
+  }
+}
