--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,6 @@ body {
   /* goes all the way from one end to the other end full bleed section */
   grid-column: full-start / full-end; }
 
-.gallery {
-  background-color: #f9f7f6;
-  /* goes all the way from one end to the other end full bleed section */
-  grid-column: full-start / full-end; }
-
 .header {
   background-color: #f9f7f6;
   /* 6/8 columns = for the header, 2/8 columns for the players section */
@@ -99,22 +94,32 @@ body {
   /* keyword for the end is -1 */
   grid-row: 1 / -1; }
 
-.story__pictures {
-  background-color: #0c22e8;
-  grid-column: full-start / col-end 4; }
-
-.story__content {
-  background-color: #f9f7f6;
-  grid-column: col-start 5 / full-end;
-  padding: 6rem 12rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start; }
-
-.story__text {
-  font-size: 1.5rem;
-  margin-bottom: 4rem; }
+.story {
+  /* Set the styles for images */ }
+  .story__pictures {
+    background-color: #0c22e8;
+    grid-column: full-start / col-end 4;
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    align-items: center; }
+  .story__img--1 {
+    width: 100%;
+    grid-row: 2 / 6;
+    grid-column: 2 / 6; }
+  .story__img--2 {
+    width: 100%; }
+  .story__content {
+    background-color: #f9f7f6;
+    grid-column: col-start 5 / full-end;
+    padding: 6rem 8vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start; }
+  .story__text {
+    font-size: 1.5rem;
+    margin-bottom: 4rem; }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Roboto", sans-serif;
