--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,11 +2,29 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
+
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    //align image in the center of the container vertically.
+    // needs to be done cause images have aspect ratio - need to be aligned. in the container so they are ordered.
+    align-items: center;
   }
+  /* Set the styles for images */
+  &__img--1 {
+    width: 100%;
+    grid-row: 2 / 6;
+    grid-column: 2 / 6;
+  }
+
+  &__img--2 {
+    width: 100%;
+  }
+
   &__content {
     background-color: $color-grey-1;
     grid-column: col-start 5 / full-end;
-    padding: 6rem 12rem;
+    padding: 6rem 8vw;
     //using flex to center - only 1 dimensional - didn't need grid
     display: flex;
     flex-direction: column;
