--- a/css/style.css
+++ b/css/style.css
@@ -105,10 +105,13 @@ body {
     align-items: center; }
   .story__img--1 {
     width: 100%;
-    grid-row: 2 / 6;
+    grid-row: 3 / 6;
     grid-column: 2 / 6; }
   .story__img--2 {
-    width: 100%; }
+    width: 110%;
+    z-index: 1;
+    grid-row: 1 / 6;
+    grid-column: 4 / 7; }
   .story__content {
     background-color: #f9f7f6;
     grid-column: col-start 5 / full-end;
