--- a/css/style.css
+++ b/css/style.css
@@ -99,18 +99,20 @@ body {
   .story__pictures {
     background-color: #0c22e8;
     grid-column: full-start / col-end 4;
+    background-image: linear-gradient(rgba(10, 25, 161, 0.3), rgba(10, 25, 161, 0.3)), url(../img/stadium-stand.png);
+    background-repeat: no-repeat;
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center; }
   .story__img--1 {
     width: 100%;
-    grid-row: 3 / 6;
-    grid-column: 2 / 6; }
+    grid-row: 2 / 6;
+    grid-column: 1 / 5; }
   .story__img--2 {
     width: 110%;
     z-index: 1;
-    grid-row: 1 / 6;
+    grid-row: 1 / 5;
     grid-column: 4 / 7; }
   .story__content {
     background-color: #f9f7f6;
