--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -51,7 +51,7 @@ body {
   /* comments for the grid-template-rows */
   // 80% of the view-height, then min-content - smallest size of box without overflowing content.
   // 40% of view-width - whats visible in the viewport depending on how wide you make screen.
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-rows: 80vh min-content 40vw min-content;
   /* comments for the grid-template-columns */
   // column layout specified below  1140/8 = 142px -> 140px -> 14rem because 14rem = 140px
   // something between 1100 - 1200 px to divide up width of the screen
