--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,11 +2,7 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(
-        rgba($color-primary-dark, 0.3),
-        rgba($color-primary-dark, 0.3)
-      ),
-      url(../img/stadium-stand.png);
+    background-image: url(../img/stadium-stand.png);
     background-repeat: no-repeat;
 
     display: grid;
