--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
   /* comments for the grid-template-rows */
   grid-template-rows: 80vh min-content 40vw min-content;
   /* comments for the grid-template-columns */
-  grid-template-columns: [sidebar-start] 5rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  grid-template-columns: [sidebar-start] 15rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
 
 /* why only name the columns and not the rows? */
 .features {
@@ -88,26 +88,11 @@ body {
   /* (what is meant above is - all the way down the webpage) */
   /* keyword for the end is -1 */
   grid-row: 1 / -1;
-  display: flex;
-  justify-content: center; }
-
-.nav-btn {
-  border: none;
-  border-radius: 0;
-  background-color: #f9f7f6;
-  height: 2px;
-  width: 2.5rem;
-  margin-top: 3rem; }
-  .nav-btn::before, .nav-btn::after {
-    background-color: #f9f7f6;
-    height: 2px;
-    width: 2.5rem;
-    content: '';
-    display: block; }
-  .nav-btn::before {
-    transform: translateY(-1rem); }
-  .nav-btn::after {
-    transform: translateY(1rem); }
+  display: grid;
+  grid-template-columns: 1fr 8.5rem 1fr; }
+  .sidebar__badge {
+    width: 100%;
+    grid-column: 2 / 3; }
 
 .story {
   /* Set the styles for images */ }
