--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: $color-grey-1;
+  background-color: $color-primary-dark;
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   // please note comment above doesn't include outer parts - (1fr parts - for full bleed)
   // 8 columns are only for the central section
