--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,8 +3,8 @@
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
     background-image: linear-gradient(
-        rgba($color-primary, 0.7),
-        rgba($color-primary, 0.7)
+        rgba($color-secondary, 0.7),
+        rgba($color-secondary, 0.7)
       ),
       url(../img/stadium-stand.png);
     background-position: center;
