--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
   /* comments for the grid-template-rows */
   grid-template-rows: 80vh min-content 40vw min-content;
   /* comments for the grid-template-columns */
-  grid-template-columns: [sidebar-start] 15rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  grid-template-columns: [sidebar-start] 20rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
 
 /* why only name the columns and not the rows? */
 .features {
@@ -72,7 +72,7 @@ body {
   grid-column: full-start / full-end; }
 
 .header {
-  background-color: #f9f7f6;
+  background-color: #0a19a1;
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   grid-column: full-start / col-end 6; }
 
@@ -81,7 +81,7 @@ body {
   grid-column: col-start 7 / full-end; }
 
 .sidebar {
-  background-color: #0c22e8;
+  background-color: #f9f7f6;
   /* sidebar to start at the grid line sidebar-start, end at sidebar-end */
   grid-column: sidebar-start / sidebar-end;
   /* second step - want it to span from the beginning of the grid to the end */
@@ -89,7 +89,7 @@ body {
   /* keyword for the end is -1 */
   grid-row: 1 / -1;
   display: grid;
-  grid-template-columns: 1fr 8.5rem 1fr; }
+  grid-template-columns: 1fr 15rem 1fr; }
   .sidebar__badge {
     width: 100%;
     grid-column: 2 / 3; }
@@ -99,7 +99,7 @@ body {
   .story__pictures {
     background-color: #0c22e8;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(rgba(12, 34, 232, 0.7), rgba(12, 34, 232, 0.7)), url(../img/stadium-stand.png);
+    background-image: linear-gradient(rgba(16, 29, 44, 0.7), rgba(16, 29, 44, 0.7)), url(../img/stadium-stand.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
