--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,4 +5,21 @@
   // 8 columns are only for the central section
   grid-column: full-start / col-end 6;
   // col-end 6? - ends after the sixth column - at the end of col 6
+  background-image: liner-gradient(
+      rgba($color-secondary, 0.93),
+      rgba($color-secondary, 0.93)
+    ),
+    &__logo {
+    height: 4rem;
+  }
+
+  &__corporate-text {
+  }
+
+  &__corporate-logos {
+    img {
+      // images all need the same height - if it was same width they might have different heights
+      height: 8rem;
+    }
+  }
 }
