--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,12 @@ body {
   grid-column: full-start / full-end; }
 
 .header {
-  background-color: #0a19a1;
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   grid-column: full-start / col-end 6;
-  background-image: liner-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), .header __logo;
-    background-image-height: 4rem; }
+  background-image: linear-gradient(rgba(10, 25, 161, 0.6), rgba(10, 25, 161, 0.6)), url(../img/header-image1.png);
+  background-size: cover; }
+  .header__logo {
+    height: 4rem; }
   .header__corporate-logos img {
     height: 8rem; }
 
