--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,13 +5,19 @@
   grid-column: full-start / col-end 6;
   // col-end 6? - ends after the sixth column - at the end of col 6
   background-image: linear-gradient(
-      rgba($color-primary-dark, 0.6),
-      rgba($color-primary-dark, 0.6)
+      rgba($color-primary-dark, 0.5),
+      rgba($color-primary-dark, 0.5)
     ),
     url(../img/header-image1.png);
   background-size: cover;
+  background-position: center;
+
+  display: grid;
+
+  grid-template-rows: 1fr;
+
   &__logo {
-    height: 4rem;
+    height: 3rem;
   }
 
   &__corporate-text {
