--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,21 +5,27 @@
   grid-column: full-start / col-end 6;
   // col-end 6? - ends after the sixth column - at the end of col 6
   background-image: linear-gradient(
-      rgba($color-primary-dark, 0.5),
-      rgba($color-primary-dark, 0.5)
+      rgba($color-grey-1, 0.4),
+      rgba($color-grey-1, 0.4)
     ),
     url(../img/header-image1.png);
   background-size: cover;
   background-position: center;
+  padding: 8rem;
 
   display: grid;
 
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-row-gap: 1.5rem;
 
   &__logo {
     height: 3rem;
   }
 
+  &__btn {
+    align-self: start;
+    justify-self: start;
+  }
   &__corporate-text {
   }
 
