--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 .header {
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   grid-column: full-start / col-end 6;
-  background-image: linear-gradient(rgba(249, 247, 246, 0.6), rgba(249, 247, 246, 0.6)), url(../img/header-image1.png);
+  background-image: linear-gradient(rgba(249, 247, 246, 0.7), rgba(249, 247, 246, 0.7)), url(../img/header-image1.png);
   background-size: cover;
   background-position: center;
   padding: 8rem;
@@ -82,7 +82,8 @@ body {
   display: grid;
   grid-template-rows: 1fr min-content 6rem 1fr;
   grid-template-columns: max-content;
-  grid-row-gap: 1.5rem; }
+  grid-row-gap: 1.5rem;
+  justify-content: center; }
   .header__logo {
     height: 3rem;
     justify-self: center; }
