--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,8 +5,8 @@
   grid-column: full-start / col-end 6;
   // col-end 6? - ends after the sixth column - at the end of col 6
   background-image: linear-gradient(
-      rgba($color-grey-1, 0.6),
-      rgba($color-grey-1, 0.6)
+      rgba($color-grey-1, 0.7),
+      rgba($color-grey-1, 0.7)
     ),
     url(../img/header-image1.png);
   background-size: cover;
@@ -20,6 +20,8 @@
   // make the columns all as wide as the max piece of content
   grid-template-columns: max-content;
   grid-row-gap: 1.5rem;
+  // center entire grid track inside of the container
+  justify-content: center;
 
   &__logo {
     height: 3rem;
