--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,11 +2,12 @@
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   // please note comment above doesn't include outer parts - (1fr parts - for full bleed)
   // 8 columns are only for the central section
-  grid-column: full-start / col-end 6;
   // col-end 6? - ends after the sixth column - at the end of col 6
+  grid-column: full-start / col-end 6;
+  //overlay - best way to create is with linear gradient. ../img - need to get out of sass folder
   background-image: linear-gradient(
-      rgba($color-grey-1, 0.7),
-      rgba($color-grey-1, 0.7)
+      rgba($color-grey-1, 0.8),
+      rgba($color-grey-1, 0.8)
     ),
     url(../img/header-image1.png);
   background-size: cover;
@@ -15,7 +16,9 @@
   padding-top: 4rem;
 
   display: grid;
-
+  // 1fr - have logo on top - push all elements down to the bottom.
+  // Fractional unit (if nothing set for other rows) means they will be set automatically.
+  // 1fr fills up all space that is avaliable-mthe other rows would be set automatically (minimum size they need)
   grid-template-rows: 1fr min-content 6rem 1fr;
   // make the columns all as wide as the max piece of content
   grid-template-columns: max-content;
