--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -12,7 +12,7 @@
     url(../img/header-image1.png);
   background-size: cover;
   background-position: center;
-  padding: 8rem;
+  padding: 5rem;
   padding-top: 4rem;
 
   display: grid;
@@ -22,7 +22,7 @@
   // 1fr fills up all space that is avaliable-mthe other rows would be set automatically (minimum size they need)
   // why does this all work also? defined height of 80vh - grid container. (80% of viewport height)
   grid-template-rows: 1fr min-content 6rem 1fr;
-  // make the columns all as wide as the max piece of content
+  // make the columns ALL as wide as the max piece of content
   grid-template-columns: max-content;
   grid-row-gap: 3rem;
   // center entire grid track inside of the container
@@ -39,6 +39,7 @@
     align-self: start;
     justify-self: start;
   }
+
   &__corporate-text {
   }
 
