--- a/css/style.css
+++ b/css/style.css
@@ -81,12 +81,11 @@ body {
   padding-top: 4rem;
   display: grid;
   /* grid row explanation */
-  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   grid-template-columns: max-content;
-  grid-row-gap: 3rem;
+  grid-row-gap: 1.5rem;
   justify-content: center; }
   .header__headline-text {
-    height: 3rem;
     align-self: end; }
   .header__btn {
     align-self: start;
