--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,15 +21,14 @@
   // Fractional unit (if nothing set for other rows) means they will be set automatically.
   // 1fr fills up all space that is avaliable-mthe other rows would be set automatically (minimum size they need)
   // why does this all work also? defined height of 80vh - grid container. (80% of viewport height)
-  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
   // make the columns ALL as wide as the max piece of content
   grid-template-columns: max-content;
-  grid-row-gap: 3rem;
+  grid-row-gap: 1.5rem;
   // center entire grid track inside of the container
   justify-content: center;
 
   &__headline-text {
-    height: 3rem;
     align-self: end;
   }
 
