--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 .header {
   /* 6/8 columns = for the header, 2/8 columns for the players section */
   grid-column: full-start / col-end 6;
-  background-image: linear-gradient(rgba(249, 247, 246, 0.8), rgba(249, 247, 246, 0.8)), url(../img/header-image1.png);
+  background-image: linear-gradient(rgba(249, 247, 246, 0.65), rgba(249, 247, 246, 0.65)), url(../img/header-image1.png);
   background-size: cover;
   background-position: center;
   padding: 5rem;
@@ -148,7 +148,7 @@ body {
     margin-bottom: 4rem; }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400; }
 
 .heading-1 {
@@ -173,7 +173,7 @@ body {
   color: #f9f7f6;
   border: none;
   border-radius: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 1.5rem;
   text-transform: uppercase;
   padding: 1.8rem 3rem;
