--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,7 +15,7 @@ $bp-smallest: 31.25em; /* 500px */
 
 /* FONT VARIABLES */
 $font-primary: 'Nunito', sans-serif;
-$font-display: 'Roboto', sans-serif;
+$font-display: 'Lato', sans-serif;
 
 * {
   margin: 0;
